# webtora-demo

./: README.md
webutora/: README.md  pyproject.toml  まずはこれをインストール.txt
webutora/webutoracore/: webutora_osc_sender.py
